--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -15,12 +15,6 @@
 \newtheorem*{hps-case-10}{Case 10}
 \newtheorem*{hps-case-11}{Case 11}
 \newtheorem*{hps-case-12}{Case 12}
-\newtheorem*{hps-case-12-1}{Case 12.1}
-\newtheorem*{hps-case-12-2}{Case 12.2}
-\newtheorem*{hps-case-12-3}{Case 12.3}
-\newtheorem*{hps-case-12-4}{Case 12.4}
-\newtheorem*{hps-case-12-5}{Case 12.5}
-\newtheorem*{hps-case-12-6}{Case 12.6}
 \newtheorem*{hps-case-13}{Case 13}
 \newtheorem*{hps-case-13-1}{Case 13.1}
 \newtheorem*{hps-case-13-2}{Case 13.2}
@@ -28,6 +22,13 @@
 \newtheorem*{hps-case-13-4}{Case 13.4}
 \newtheorem*{hps-case-13-5}{Case 13.5}
 \newtheorem*{hps-case-13-6}{Case 13.6}
+\newtheorem*{hps-case-14}{Case 14}
+\newtheorem*{hps-case-14-1}{Case 14.1}
+\newtheorem*{hps-case-14-2}{Case 14.2}
+\newtheorem*{hps-case-14-3}{Case 14.3}
+\newtheorem*{hps-case-14-4}{Case 14.4}
+\newtheorem*{hps-case-14-5}{Case 14.5}
+\newtheorem*{hps-case-14-6}{Case 14.6}
 \newtheorem{hi}[hps]{Lemma}
 \newtheorem{huot}[hps]{Lemma}
 \newtheorem{hcf}[hps]{Lemma}
