Finished first draft of ML progress theorem.

--- a/proof/hps.tex
+++ b/proof/hps.tex
@@ -102,17 +102,17 @@ $e_{M}^{1}=\Lambda X_{1}.e_{M}^{2}$ for some $e_{M}^{2}$ by canonical forms (Lem
 \begin{hps-case-13-4}
 $T=[T_{1}]$
 
-$e_{M}^{1}=\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2}$ for some $v_{M}^{1}$ and $v_{M}^{1}$ by canonical forms (Lemma \ref{mcf}).  $^{[T_{1}]}HM^{[T_{1}]}\;(\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2})]_{H}\rightarrow\mathtt{cons}\;(^{T_{1}}HM^{T_{1}}\;v_{M}^{1})\;(^{[T_{1}]}HM^{[T_{1}]}\;v_{M}^{2})$.
+$e_{M}^{1}=\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2}$ for some $v_{M}^{1}$ and $v_{M}^{1}$ by canonical forms (Lemma \ref{mcf}).  $^{[T_{1}]}HM^{[T_{1}]}\;(\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2})\rightarrow\mathtt{cons}\;(^{T_{1}}HM^{T_{1}}\;v_{M}^{1})\;(^{[T_{1}]}HM^{[T_{1}]}\;v_{M}^{2})$.
 \end{hps-case-13-4}
 \begin{hps-case-13-5}
 $T=L$
 
-Cannot occur because $L$ occurs only in $^{L}HS\;e_{S}$, $SH^{L}\;e_{H}$, $^{L}MS\;e_{S}$, and $SM^{L}\;e_{M}$ terms.
+Cannot occur because $L$ occurs only in $^{L}HS\;e_{S}$.
 \end{hps-case-13-5}
 \begin{hps-case-13-6}
 $T=T_{1}^{a}$
 
-Cannot occur because $T_{1}^{a}$ occurs only in $^{T_{1}^{a}}HS\;e_{S}$, $SH^{T_{1}^{a}}\;e_{H}$, $^{T_{1}^{a}}MS\;e_{S}$, and $SM^{_{1}T^{a}}\;e_{M}$ terms.
+Cannot occur because $T_{1}^{a}$ occurs only in $^{T_{1}^{a}}HS\;e_{S}$.
 \end{hps-case-13-6}
 \end{hps-case-13}
 \begin{hps-case-14}
@@ -137,7 +137,7 @@ $^{\forall X.T_{1}}HS\;e_{S}^{1}$ is a value.
 \begin{hps-case-14-4}
 $T=[T_{1}]$
 
-If $e_{S}^{1}=\mathtt{cons}\;e_{S}^{2}\;e_{S}^{3}$ for some $e_{S}^{2}$ and $e_{S}^{3}$ then $^{[T_{1}]}HS\;(\mathtt{cons}\;e_{S}^{2}\;e_{S}^{3})\rightarrow\mathtt{cons}\;(^{T_{1}}HS\;e_{S}^{2})\;(^{[T_{1}]}HS\;e_{S}^{3})$.  Otherwise, $^{[T_{1}]}HS\;e_{S}^{1}\rightarrow\,^{[T_{1}]}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;list"})$.
+If $e_{S}^{1}=\mathtt{cons}\;v_{S}^{2}\;v_{S}^{3}$ for some $v_{S}^{2}$ and $v_{S}^{3}$ then $^{[T_{1}]}HS\;(\mathtt{cons}\;v_{S}^{2}\;v_{S}^{3})\rightarrow\mathtt{cons}\;(^{T_{1}}HS\;v_{S}^{2})\;(^{[T_{1}]}HS\;v_{S}^{3})$.  Otherwise, $^{[T_{1}]}HS\;e_{S}^{1}\rightarrow\,^{[T_{1}]}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;list"})$.
 \end{hps-case-14-4}
 \begin{hps-case-14-5}
 $T=L$
