--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -33,6 +33,34 @@
 \newtheorem{huot}[hps]{Lemma}
 \newtheorem{hcf}[hps]{Lemma}
 \newtheorem{mps}{Theorem}[section]
+\newtheorem*{mps-case-1}{Case 1}
+\newtheorem*{mps-case-2}{Case 2}
+\newtheorem*{mps-case-3}{Case 3}
+\newtheorem*{mps-case-4}{Case 4}
+\newtheorem*{mps-case-5}{Case 5}
+\newtheorem*{mps-case-6}{Case 6}
+\newtheorem*{mps-case-7}{Case 7}
+\newtheorem*{mps-case-8}{Case 8}
+\newtheorem*{mps-case-8-1}{Case 8.1}
+\newtheorem*{mps-case-8-2}{Case 8.2}
+\newtheorem*{mps-case-9}{Case 9}
+\newtheorem*{mps-case-10}{Case 10}
+\newtheorem*{mps-case-11}{Case 11}
+\newtheorem*{mps-case-12}{Case 12}
+\newtheorem*{mps-case-13}{Case 13}
+\newtheorem*{mps-case-13-1}{Case 13.1}
+\newtheorem*{mps-case-13-2}{Case 13.2}
+\newtheorem*{mps-case-13-3}{Case 13.3}
+\newtheorem*{mps-case-13-4}{Case 13.4}
+\newtheorem*{mps-case-13-5}{Case 13.5}
+\newtheorem*{mps-case-13-6}{Case 13.6}
+\newtheorem*{mps-case-14}{Case 14}
+\newtheorem*{mps-case-14-1}{Case 14.1}
+\newtheorem*{mps-case-14-2}{Case 14.2}
+\newtheorem*{mps-case-14-3}{Case 14.3}
+\newtheorem*{mps-case-14-4}{Case 14.4}
+\newtheorem*{mps-case-14-5}{Case 14.5}
+\newtheorem*{mps-case-14-6}{Case 14.6}
 \newtheorem{mi}[mps]{Lemma}
 \newtheorem{muot}[mps]{Lemma}
 \newtheorem{mcf}[mps]{Lemma}
@@ -45,12 +73,6 @@
 \input{hps.tex}
 \section{ML}
 \input{mps.tex}
-\input{mi.tex}
-\input{muot.tex}
-\input{mcf.tex}
 \section{Scheme}
 \input{sps.tex}
-\input{si.tex}
-\input{suot.tex}
-\input{scf.tex}
 \end{document}
