Stopping to exercise.  Need to factor out all dupes or it will be huge.

--- a/proof/hcf.tex
+++ b/proof/hcf.tex
@@ -1,6 +1,6 @@
 \begin{hcf}
 \label{hcf}
-\mbox{}
+Canonical Forms
 \begin{enumerate}
 \item If $e_{H}$ is a normal form of type $N$ then $e_{H}=\overline{n}$.
 \item If $e_{H}$ is a normal form of type $T_{1}\rightarrow T_{2}$ then $e_{H}=\lambda x:T_{1}.e_{H}$.
