--- a/proof/hi.tex
+++ b/proof/hi.tex
@@ -1,6 +1,6 @@
 \begin{hi}
 \label{hi}
-\mbox{}
+Inversion
 \begin{enumerate}
 \item If $\vdash_{H}\overline{n}:T$ then $T=N$.
 \item If $\Gamma\vdash_{H}x:T$ then $x:T\in\Gamma$.
