--- a/proof/huot.tex
+++ b/proof/huot.tex
@@ -1,7 +1,9 @@
 \begin{huot}
 \label{huot}
+Uniqueness of Types
+
 If $\Gamma\vdash_{H}e_{H}:T_{1}$ and $\Gamma\vdash_{H}e_{H}:T_{2}$ then $T_{1}=T_{2}$.
 \begin{proof}
-Straightforward structural induction on $e_{H}$.
+By structural induction on $e_{H}$ using inversion (Lemma \ref{hi}).
 \end{proof}
 \end{huot}
