--- a/proof/mcf.tex
+++ b/proof/mcf.tex
@@ -1,6 +1,6 @@
 \begin{mcf}
 \label{mcf}
-\mbox{}
+Canonical Forms
 \begin{enumerate}
 \item If $e_{M}$ is a normal form of type $N$ then $e_{M}=\overline{n}$.
 \item If $e_{M}$ is a normal form of type $T_{1}\rightarrow T_{2}$ then $e_{M}=\lambda x:T_{1}.e_{M}$.
