--- a/proof/mps.tex
+++ b/proof/mps.tex
@@ -5,7 +5,7 @@ If $\vdash_{M}e_{M}:T$ then either $e_{M}$ is a value, $e_{M}\rightarrow e_{M}'$
 \input{muot.tex}
 \input{mcf.tex}
 \begin{proof}
-Straightforward induction on typing derivations of $\vdash_{M}e_{M}:T$.
+Straightforward structural induction on $e_{M}$.
 \begin{mps-case-1}
 $e_{M}=x$
 
