--- a/proof/muot.tex
+++ b/proof/muot.tex
@@ -1,7 +1,9 @@
 \begin{muot}
 \label{muot}
+Uniqueness of Types
+
 If $\Gamma\vdash_{M}e_{M}:T_{1}$ and $\Gamma\vdash_{M}e_{M}:T_{2}$ then $T_{1}=T_{2}$.
 \begin{proof}
-Straightforward structural induction on $e_{M}$.
+By structural induction on $e_{M}$ using inversion (Lemma \ref{mi}).
 \end{proof}
 \end{muot}
