--- a/proof/mi.tex
+++ b/proof/mi.tex
@@ -1,6 +1,6 @@
 \begin{mi}
 \label{mi}
-\mbox{}
+Inversion
 \begin{enumerate}
 \item If $\vdash_{M}\overline{n}:T$ then $T=N$.
 \item If $\Gamma\vdash_{M}x:T$ then $x:T\in\Gamma$.
