--- a/proof/sps.tex
+++ b/proof/sps.tex
@@ -5,7 +5,7 @@ If $\vdash_{H}e_{H}:T$ then either $e_{H}$ is a value, $e_{H}\rightarrow e_{H}'$
 \input{huot.tex}
 \input{hcf.tex}
 \begin{proof}
-Straightforward induction on typing derivations of $\vdash_{H}e_{H}:T$.
+Straightforward structural induction on $e_{H}$.
 \begin{hps-case-1}
 $e_{H}=x$
 
