Finished htes.tex.

--- a/proof/hps.tex
+++ b/proof/hps.tex
@@ -1,9 +1,7 @@
 \begin{hps}
 \label{hps}
+\onehalfspacing
 If $\vdash_{H}e_{H}:T$ then either $e_{H}$ is a value, $e_{H}\rightarrow e_{H}'$ for some $e_{H}'$, or $e_{H}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string}.
-\input{hi.tex}
-\input{huot.tex}
-\input{hcf.tex}
 \begin{proof}
 Straightforward structural induction on $e_{H}$.
 \begin{hps-case-1}
