--- a/proof/htes.tex
+++ b/proof/htes.tex
@@ -1,6 +1,6 @@
 \begin{htes}
 \label{htes}
-If $\Gamma,X\vdash_{H}e_{H}:T_{1}$ and $\Gamma\vdash_{H}T_{2}$ then $\Gamma\vdash_{H}e_{H}[T_{2}/X]:T_{1}[T_{2}/X]$.
+If $\Gamma,X\vdash_{H}e_{H}:T_{1}$ and $\vdash_{H}T_{2}$ then $\Gamma\vdash_{H}e_{H}[T_{2}/X]:T_{1}[T_{2}/X]$.
 \begin{proof}
 Induction on derivations of $\Gamma,X\vdash_{H}e_{H}:T_{1}$.
 \end{proof}
