--- a/model/sitr.tex
+++ b/model/sitr.tex
@@ -1,8 +1,8 @@
 \begin{figure}
 \[
-\frac{\Gamma\vdash_{H}t_{H}:T[T_{i}/T^{a}_{i}]\quad\Gamma\vdash_{H}T}{\Gamma\vdash_{S}\;SH^{T}\;t_{H}:TST}
+\frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{H}e_{H}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}\;SH^{T}\;e_{H}:TST}
 \quad
-\frac{\Gamma\vdash_{M}t_{M}:T[T_{i}/T^{a}_{i}]\quad\Gamma\vdash_{M}T}{\Gamma\vdash_{S}\;SM^{T}\;t_{M}:TST}
+\frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{M}e_{M}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}\;SM^{T}\;e_{M}:TST}
 \]
 \caption{Scheme interoperation typing rules}
 \label{sitr}
