--- a/model/mctr.tex
+++ b/model/mctr.tex
@@ -14,7 +14,7 @@
 \[
 \frac{}{\Gamma\vdash_{M}\overline{n}:N}
 \quad
-\frac{}{\Gamma\vdash_{M}\mathtt{nil}:\forall X.[X]}
+\frac{}{\Gamma\vdash_{M}\mathtt{nil}^{T}:[T]}
 \quad
 \frac{x:T\in\Gamma}{\Gamma\vdash_{M}x:T}
 \quad
