--- a/proof/hcf.tex
+++ b/proof/hcf.tex
@@ -1,4 +1,4 @@
-\begin{hcf}
+\begin{lemma}
 \label{hcf}
 Canonical Forms
 \begin{enumerate}
@@ -11,4 +11,4 @@ Canonical Forms
 \begin{proof}
 Immediate from the definition of Haskell values and the Haskell typing relation.
 \end{proof}
-\end{hcf}
+\end{lemma}
