--- a/proof/htes.tex
+++ b/proof/htes.tex
@@ -1,7 +1,7 @@
-\begin{htes}
+\begin{lemma}
 \label{htes}
 If $\Gamma,X\vdash_{H}e_{H}:T_{1}$ and $\vdash_{H}T_{2}$ then $\Gamma\vdash_{H}e_{H}[T_{2}/X]:T_{1}[T_{2}/X]$.
 \begin{proof}
 Induction on derivations of $\Gamma,X\vdash_{H}e_{H}:T_{1}$.
 \end{proof}
-\end{htes}
+\end{lemma}
