--- a/proof/huot.tex
+++ b/proof/huot.tex
@@ -1,4 +1,4 @@
-\begin{huot}
+\begin{lemma}
 \label{huot}
 Uniqueness of Types
 
@@ -6,4 +6,4 @@ If $\Gamma\vdash_{H}e_{H}:T_{1}$ and $\Gamma\vdash_{H}e_{H}:T_{2}$ then $T_{1}=T
 \begin{proof}
 By structural induction on $e_{H}$ using inversion (Lemma \ref{hi}).
 \end{proof}
-\end{huot}
+\end{lemma}
