--- a/proof/hecp.tex
+++ b/proof/hecp.tex
@@ -1,7 +1,7 @@
-\begin{hecp}
+\begin{lemma}
 \label{hecp}
 If $\Gamma\vdash_{H}e_{H}^{1}:T_{1}$, $\Gamma\vdash_{H}e_{H}^{2}:T_{2}$, and $\mathscr{E}[e_{H}^{1}]:T_{1}$ then $\mathscr{E}[e_{H}^{2}]:T_{2}$.
 \begin{proof}
 By structural induction because typing rules use types and not forms of sub-terms.
 \end{proof}
-\end{hecp}
+\end{lemma}
