--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -1,105 +1,13 @@
 \documentclass[12pt]{article}
 \usepackage{amsmath, amssymb, amsthm, mathrsfs, setspace}
-\newtheorem{hps}{Theorem}[section]
-\newtheorem{inversion}[hps]{Lemma}
-\newtheorem{huot}[hps]{Lemma}
-\newtheorem{hcf}[hps]{Lemma}
-\newtheorem*{hps-case-1}{Case 1}
-\newtheorem*{hps-case-2}{Case 2}
-\newtheorem*{hps-case-3}{Case 3}
-\newtheorem*{hps-case-4}{Case 4}
-\newtheorem*{hps-case-5}{Case 5}
-\newtheorem*{hps-case-6}{Case 6}
-\newtheorem*{hps-case-7}{Case 7}
-\newtheorem*{hps-case-8}{Case 8}
-\newtheorem*{hps-case-8-1}{Case 8.1}
-\newtheorem*{hps-case-8-2}{Case 8.2}
-\newtheorem*{hps-case-9}{Case 9}
-\newtheorem*{hps-case-10}{Case 10}
-\newtheorem*{hps-case-11}{Case 11}
-\newtheorem*{hps-case-12}{Case 12}
-\newtheorem*{hps-case-13}{Case 13}
-\newtheorem*{hps-case-13-1}{Case 13.1}
-\newtheorem*{hps-case-13-2}{Case 13.2}
-\newtheorem*{hps-case-13-3}{Case 13.3}
-\newtheorem*{hps-case-13-4}{Case 13.4}
-\newtheorem*{hps-case-13-5}{Case 13.5}
-\newtheorem*{hps-case-13-6}{Case 13.6}
-\newtheorem*{hps-case-14}{Case 14}
-\newtheorem*{hps-case-14-1}{Case 14.1}
-\newtheorem*{hps-case-14-2}{Case 14.2}
-\newtheorem*{hps-case-14-3}{Case 14.3}
-\newtheorem*{hps-case-14-4}{Case 14.4}
-\newtheorem*{hps-case-14-5}{Case 14.5}
-\newtheorem*{hps-case-14-6}{Case 14.6}
-\newtheorem{hpn}{Theorem}[section]
-\newtheorem{hecp}[hpn]{Lemma}
-\newtheorem{htms}[hpn]{Lemma}
-\newtheorem{htes}[hpn]{Lemma}
-\newtheorem*{hpn-case-1}{Case 1}
-\newtheorem*{hpn-case-2}{Case 2}
-\newtheorem*{hpn-case-3}{Case 3}
-\newtheorem*{hpn-case-4}{Case 4}
-\newtheorem*{hpn-case-5}{Case 5}
-\newtheorem*{hpn-case-6}{Case 6}
-\newtheorem*{hpn-case-7}{Case 7}
-\newtheorem*{hpn-case-8}{Case 8}
-\newtheorem*{hpn-case-9}{Case 9}
-\newtheorem*{hpn-case-10}{Case 10}
-\newtheorem*{hpn-case-11}{Case 11}
-\newtheorem*{hpn-case-12}{Case 12}
-\newtheorem*{hpn-case-13}{Case 13}
-\newtheorem*{hpn-case-14}{Case 14}
-\newtheorem*{hpn-case-15}{Case 15}
-\newtheorem*{hpn-case-16}{Case 16}
-\newtheorem*{hpn-case-17}{Case 17}
-\newtheorem*{hpn-case-18}{Case 18}
-\newtheorem*{hpn-case-19}{Case 19}
-\newtheorem*{hpn-case-20}{Case 20}
-\newtheorem*{hpn-case-21}{Case 21}
-\newtheorem*{hpn-case-22}{Case 22}
-
-\newtheorem{mps}{Theorem}[section]
-\newtheorem{mi}[mps]{Lemma}
-\newtheorem{muot}[mps]{Lemma}
-\newtheorem{mcf}[mps]{Lemma}
-\newtheorem*{mps-case-1}{Case 1}
-\newtheorem*{mps-case-2}{Case 2}
-\newtheorem*{mps-case-3}{Case 3}
-\newtheorem*{mps-case-4}{Case 4}
-\newtheorem*{mps-case-5}{Case 5}
-\newtheorem*{mps-case-6}{Case 6}
-\newtheorem*{mps-case-7}{Case 7}
-\newtheorem*{mps-case-8}{Case 8}
-\newtheorem*{mps-case-8-1}{Case 8.1}
-\newtheorem*{mps-case-8-2}{Case 8.2}
-\newtheorem*{mps-case-9}{Case 9}
-\newtheorem*{mps-case-10}{Case 10}
-\newtheorem*{mps-case-11}{Case 11}
-\newtheorem*{mps-case-12}{Case 12}
-\newtheorem*{mps-case-13}{Case 13}
-\newtheorem*{mps-case-13-1}{Case 13.1}
-\newtheorem*{mps-case-13-2}{Case 13.2}
-\newtheorem*{mps-case-13-3}{Case 13.3}
-\newtheorem*{mps-case-13-4}{Case 13.4}
-\newtheorem*{mps-case-13-5}{Case 13.5}
-\newtheorem*{mps-case-13-6}{Case 13.6}
-\newtheorem*{mps-case-14}{Case 14}
-\newtheorem*{mps-case-14-1}{Case 14.1}
-\newtheorem*{mps-case-14-2}{Case 14.2}
-\newtheorem*{mps-case-14-3}{Case 14.3}
-\newtheorem*{mps-case-14-4}{Case 14.4}
-\newtheorem*{mps-case-14-5}{Case 14.5}
-\newtheorem*{mps-case-14-6}{Case 14.6}
-\newtheorem{sps}{Theorem}[section]
-\newtheorem{si}[sps]{Lemma}
-\newtheorem{suot}[sps]{Lemma}
-\newtheorem{scf}[sps]{Lemma}
+\newtheorem{theorem}{Theorem}
+\newtheorem{lemma}{Lemma}
+\newtheorem{case}{Case}[theorem]
 \begin{document}
 \section{Haskell}
 \input{inversion.tex}
-\input{huot.tex}
-\input{hcf.tex}
+%\input{uniqueness-of-types.tex}
+\input{canonical-forms.tex}
 \input{hps.tex}
 \input{hecp.tex}
 \input{htms.tex}
