Finished uniqueness-of-types.tex.  Removed huotl.tex, muotl.tex, suotl.tex.

--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -6,7 +6,7 @@
 \begin{document}
 \section{Haskell}
 \input{inversion.tex}
-%\input{uniqueness-of-types.tex}
+\input{uniqueness-of-types.tex}
 \input{canonical-forms.tex}
 \input{hps.tex}
 \input{hecp.tex}
